force-app/main/default/objects/Case/fields/Academic_Performance_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Academic_Performance_Reason_s__c</fullName>
    <label>Academic Performance Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance on tests</fullName>
            </value>
            <value>
                <fullName>Performance on assignments or papers</fullName>
            </value>
            <value>
                <fullName>Missing assignments</fullName>
            </value>
            <value>
                <fullName>Missing tests or other major assessments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>