force-app/main/default/objects/Case/fields/Alert_Term_lookup__c.field-meta.xml
<CustomField>
    <fullName>Alert_Term_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the term object for this alert. Use the Banner term format (example: 202040) and not the friendly name format (example Fall 2020)</description>
    <inlineHelpText>Lookup to the term object for this alert. Use the Banner term format (example: 202040) and not the friendly name format (example Fall 2020)</inlineHelpText>
    <label>Alert Term (lookup)</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Alert Term Cases</relationshipLabel>
    <relationshipName>Alert_Term_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>