force-app/main/default/objects/Case/fields/Attendance_Concerns_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Concerns_Reason_s__c</fullName>
    <label>Attendance Concerns Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing periodically</fullName>
            </value>
            <value>
                <fullName>Missing excessively</fullName>
            </value>
            <value>
                <fullName>Stopped attending and/or never attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>