force-app/main/default/objects/Case/fields/Can_this_student_pass_course__c.field-meta.xml
<CustomField>
    <fullName>Can_this_student_pass_course__c</fullName>
    <description>Does this student have the ability to pass your course (if applicable):</description>
    <inlineHelpText>Does this student have the ability to pass your course (if applicable):</inlineHelpText>
    <label>Can this student pass course?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>