force-app/main/default/objects/Case/fields/Case_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Case_Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Faculty or Staff member who opened this case.</description>
    <label>Case Reporter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Case Reporter)</relationshipLabel>
    <relationshipName>Tommie_Cares</relationshipName>
    <type>Lookup</type>
</CustomField>