force-app/main/default/objects/Case/fields/Community_Concern__c.field-meta.xml
<CustomField>
    <fullName>Community_Concern__c</fullName>
    <label>Community Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I would like to report a concern about a student in one of my classes</fullName>
            </value>
            <value>
                <fullName>I would like to report a behavior or well-being concern</fullName>
            </value>
            <value>
                <fullName>I want to report an incident of possible discrimination, bias, or harassment</fullName>
            </value>
            <value>
                <fullName>I would like to report a concern related to possible sexual misconduct (including Title IX)</fullName>
            </value>
            <value>
                <fullName>I would like to submit an information report that does not fit the criteria of any of the above reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>