force-app/main/default/objects/Case/fields/Community_Concern_Who_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Concern_Who_Type__c</fullName>
    <label>Community Concern Who Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>