force-app/main/default/objects/Case/fields/Contact_Mailing_First_Name_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_First_Name_Last_Name__c</fullName>
    <formula>Contact.Mailing_First_Name__c &amp; &quot; &quot; &amp;  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing First Name + Last Name</label>
    <type>Text</type>
</CustomField>