force-app/main/default/objects/Case/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>