force-app/main/default/objects/Case/fields/Current_Professor_Emails__c.field-meta.xml
<CustomField>
    <fullName>Current_Professor_Emails__c</fullName>
    <label>Current Professor Email(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>