force-app/main/default/objects/Case/fields/Faculty_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Faculty Advisor)</relationshipLabel>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>