force-app/main/default/objects/Case/fields/Faculty_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Advisor_Email__c</fullName>
    <label>Faculty Advisor Email</label>
    <type>Email</type>
</CustomField>