force-app/main/default/objects/Case/fields/Financial_Aid_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Aid Counselor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Financial Aid Counselor)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>