force-app/main/default/objects/Case/fields/Financial_Aid_Counselor_Email__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Counselor_Email__c</fullName>
    <label>Financial Aid Counselor Email</label>
    <type>Email</type>
</CustomField>