force-app/main/default/objects/Case/fields/First_Year_Advisor__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First-Year Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (First-Year Advisor)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>