force-app/main/default/objects/Case/fields/First_Year_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Advisor_Email__c</fullName>
    <label>First-Year Advisor Email</label>
    <type>Email</type>
</CustomField>