force-app/main/default/objects/Case/fields/General_Advisor__c.field-meta.xml
<CustomField>
    <fullName>General_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (General Advisor)</relationshipLabel>
    <relationshipName>Cases9</relationshipName>
    <type>Lookup</type>
</CustomField>