force-app/main/default/objects/Case/fields/General_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Advisor_Email__c</fullName>
    <label>General Advisor Email</label>
    <type>Email</type>
</CustomField>