force-app/main/default/objects/Case/fields/Has_this_student_returned_to_class__c.field-meta.xml
<CustomField>
    <fullName>Has_this_student_returned_to_class__c</fullName>
    <inlineHelpText>(if applicable)</inlineHelpText>
    <label>Has this student returned to class?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>