force-app/main/default/objects/Case/fields/Have_you_connected_with_this_student__c.field-meta.xml
<CustomField>
    <fullName>Have_you_connected_with_this_student__c</fullName>
    <label>Have you connected with this student?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>