force-app/main/default/objects/Case/fields/International_Advisor__c.field-meta.xml
<CustomField>
    <fullName>International_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>International Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (International Advisor)</relationshipLabel>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>