force-app/main/default/objects/Case/fields/International_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>International_Advisor_Email__c</fullName>
    <label>International Advisor Email</label>
    <type>Email</type>
</CustomField>