force-app/main/default/objects/Case/fields/Please_share_URL_link_for_supporting_doc__c.field-meta.xml
<CustomField>
    <fullName>Please_share_URL_link_for_supporting_doc__c</fullName>
    <description>Please share URL link for supporting document you feel would be helpful.</description>
    <inlineHelpText>Please share URL link for supporting document you feel would be helpful.</inlineHelpText>
    <label>Please share URL link for supporting doc</label>
    <type>Url</type>
</CustomField>