force-app/main/default/objects/Case/fields/Primary_Advisor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Advisor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Primary Advisor Contact)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>