force-app/main/default/objects/Case/fields/Primary_Advisory_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisory_Email__c</fullName>
    <label>Primary Advisory Email</label>
    <type>Email</type>
</CustomField>