force-app/main/default/objects/Case/fields/Probation_Advisor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Probation_Advisor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Probation Advisor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Probation Advisor Contact)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>