force-app/main/default/objects/Case/fields/Probation_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Probation_Advisor_Email__c</fullName>
    <label>Probation Advisor Email</label>
    <type>Email</type>
</CustomField>