force-app/main/default/objects/Case/fields/Relationship_Violence_Stalking_Link__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Violence_Stalking_Link__c</fullName>
    <formula>IF( INCLUDES(Tommie_Alert_Primary_Reason__c,&quot;Relationship violence/stalking&quot;),&quot;Complete this form: &quot; &amp; HYPERLINK(&quot;https://stthomas-advocate.symplicity.com/titleix_report/index.php/pid350778?&quot;, &quot;Submit a Title IX Complaint | St. Thomas Conduct (symplicity.com) &quot;, &quot;_blank&quot;),&quot;&quot;)</formula>
    <label>Relationship Violence/Stalking Link</label>
    <type>Text</type>
</CustomField>