force-app/main/default/objects/Case/fields/Reporter_University_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporter_University_Email__c</fullName>
    <label>Reporter University Email</label>
    <type>Email</type>
</CustomField>