force-app/main/default/objects/Case/fields/Restricted_Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Access_Notes__c</fullName>
    <description>Field used for Academic Counseling.  This field should only be accessible to the Retention Profile and System Admin.</description>
    <inlineHelpText>This field is only visible to Academic Counselors.</inlineHelpText>
    <label>Restricted Access Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>