force-app/main/default/objects/Case/fields/Student_Athlete_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Student_Athlete_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student-Athlete Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Student-Athlete Advisor)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>