force-app/main/default/objects/Case/fields/Student_Athlete_Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Athlete_Advisor_Email__c</fullName>
    <label>Student-Athlete Advisor Email</label>
    <type>Email</type>
</CustomField>