force-app/main/default/objects/Case/fields/Tommie_Alert_Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tommie_Alert_Primary_Reason__c</fullName>
    <inlineHelpText>Behavior concerns (threatening, intimidating, disrespectful, hostile, etc)
Mental health concerns (anxiety, depression, mood swings, etc)
Sense of belonging (not connecting on campus)</inlineHelpText>
    <label>Tommie Alert Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tommie High 5</fullName>
            </value>
            <value>
                <fullName>Attendance concerns</fullName>
            </value>
            <value>
                <fullName>Academic performance concerns</fullName>
            </value>
            <value>
                <fullName>Behavior concerns</fullName>
            </value>
            <value>
                <fullName>Financial concerns</fullName>
            </value>
            <value>
                <fullName>Mental health concerns</fullName>
            </value>
            <value>
                <fullName>Relationship violence/stalking</fullName>
            </value>
            <value>
                <fullName>Sense of belonging</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non-Responsive to Outreach</fullName>
            </value>
            <value>
                <fullName>Missed Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Difficulty Meeting Basic Needs (food/housing, etc)</fullName>
            </value>
            <value>
                <fullName>Life Circumstances Impacting Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>