force-app/main/default/objects/Case/fields/Tommie_Alert_Primary_Reason_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tommie_Alert_Primary_Reason_Other_Notes__c</fullName>
    <label>Tommie Alert Primary Reason Other Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>