force-app/main/default/objects/Case/fields/Tommie_High_5__c.field-meta.xml
<CustomField>
    <fullName>Tommie_High_5__c</fullName>
    <description>Keep Up the Good Work (use to recognize good work in the classroom) 
Showing Improvement (use when a student has showed improvement in a course</description>
    <inlineHelpText>Keep Up the Good Work (use to recognize good work in the classroom) 
Showing Improvement (use when a student has showed improvement in a course</inlineHelpText>
    <label>Tommie High 5 Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep Up the Good Work</fullName>
            </value>
            <value>
                <fullName>Showing Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>