force-app/main/default/objects/Case/fields/Tommie_High_5_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tommie_High_5_Notes__c</fullName>
    <label>Tommie High 5 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>