force-app/main/default/objects/Case/recordTypes/Community_Concern.recordType-meta.xml
<RecordType>
    <fullName>Community_Concern</fullName>
    <active>true</active>
    <businessProcess>Retention</businessProcess>
    <description>Used to capture Community of Concern reports</description>
    <label>Community Concern</label>
</RecordType>