force-app/main/default/objects/Case/recordTypes/Tommie_Cares.recordType-meta.xml
<RecordType>
    <fullName>Tommie_Cares</fullName>
    <active>true</active>
    <businessProcess>UST</businessProcess>
    <description>Formerly known as Current Student Alerts</description>
    <label>Tommie Cares</label>
</RecordType>